1.5/_sources/modules/generated/sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.rst.txt
QuadraticDiscriminantAnalysis
=============================

.. currentmodule:: sklearn.discriminant_analysis

.. autoclass:: QuadraticDiscriminantAnalysis
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__init__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.decision_function sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.fit sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.get_metadata_routing sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.get_params sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.predict sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.predict_log_proba sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.predict_proba sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.score sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.set_params sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -