1.7/_sources/modules/generated/sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.rst.txt
QuadraticDiscriminantAnalysis
=============================

.. currentmodule:: sklearn.discriminant_analysis

.. autoclass:: QuadraticDiscriminantAnalysis
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__delattr__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__dir__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__eq__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__format__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__ge__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__getattribute__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__getstate__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__gt__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__hash__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__init__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__init_subclass__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__le__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__lt__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__ne__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__new__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__reduce__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__reduce_ex__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__repr__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__setattr__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__setstate__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__sizeof__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__sklearn_clone__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__sklearn_tags__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__str__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.__subclasshook__ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._build_request_for_signature sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._decision_function sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._get_default_requests sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._get_doc_link sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._get_metadata_request sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._get_param_names sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._get_params_html sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._html_repr sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._repr_html_inner sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._repr_mimebundle_ sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis._validate_params sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.decision_function sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.fit sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.get_metadata_routing sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.get_params sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.predict sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.predict_log_proba sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.predict_proba sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.score sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.set_params sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -